--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:18.0.0'
     implementation 'com.firebase:geofire-java:3.0.0'
     implementation 'com.google.android.gms:play-services-location:15.0.1'
+    implementation 'com.android.support:cardview-v7:28.0.0'
+    implementation 'com.google.android.libraries.places:places:1.0.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
