--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     implementation 'com.firebase:geofire-java:3.0.0'
     implementation 'com.google.android.gms:play-services-location:15.0.1'
     implementation 'com.android.support:cardview-v7:28.0.0'
+    implementation 'com.github.jd-alexander:library:1.1.0'
     implementation 'com.google.android.libraries.places:places:1.0.0'
 }
 
