--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,8 +34,9 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:15.0.1'
     implementation 'com.android.support:cardview-v7:28.0.0'
     implementation 'com.github.jd-alexander:library:1.1.0'
-    implementation 'com.google.android.libraries.places:places:1.0.0'
-    implementation 'com.google.android.gms:play-services-places:16.0.0'
+//    implementation 'com.google.android.libraries.places:places:1.0.0'
+//    implementation 'com.google.android.gms:play-services-places:16.0.0'
+    implementation 'com.google.android.libraries.places:places-compat:1.0.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
